--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .terraform/providers/registry.terraform.io/hashicorp/aws/5.64.0/windows_amd64/LICENSE.txt
 .terraform/providers/registry.terraform.io/hashicorp/aws/5.64.0/windows_amd64/terraform-provider-aws_v5.64.0_x5.exe
 .terraform/modules/modules.json
+.terraform/terraform.tfstate
